@@ -19,6 +19,7 @@
 #include "LoadsHeatfluxesTree.hpp"
 #include "LoadsGravityTree.hpp"
 #include "LoadsCentrifugalTree.hpp"
+#include "LoadsTrajectoryTree.hpp"
 #include "BCsTree.hpp"
 #include "BCsDisplacementsTree.hpp"
 #include "BCsTemperaturesTree.hpp"
@@ -35,6 +36,7 @@
 #include "StepsLoadsHeatfluxesTree.hpp"
 #include "StepsLoadsGravityTree.hpp"
 #include "StepsLoadsCentrifugalTree.hpp"
+#include "StepsLoadsTrajectoryTree.hpp"
 #include "StepsBCsTree.hpp"
 #include "StepsBCsDisplacementsTree.hpp"
 #include "StepsBCsTemperaturesTree.hpp"
@@ -100,6 +102,7 @@ void Highlight::ModelTreeItemClicked(QTreeWidgetItem* item, int column)
   LoadsHeatfluxesTree* LoadsHeatfluxesTreeItem;
   LoadsGravityTree* LoadsGravityTreeItem;
   LoadsCentrifugalTree* LoadsCentrifugalTreeItem;
+  LoadsTrajectoryTree* LoadsTrajectoryTreeItem;
   BCsDisplacementsTree* BCsDisplacementsTreeItem;
   BCsTemperaturesTree* BCsTemperaturesTreeItem;
   HistoryOutputsTree* HistoryOutputsTreeItem;
@@ -115,6 +118,7 @@ void Highlight::ModelTreeItemClicked(QTreeWidgetItem* item, int column)
   StepsLoadsHeatfluxesTree* StepsLoadsHeatfluxesTreeItem;
   StepsLoadsGravityTree* StepsLoadsGravityTreeItem;
   StepsLoadsCentrifugalTree* StepsLoadsCentrifugalTreeItem;
+  StepsLoadsTrajectoryTree* StepsLoadsTrajectoryTreeItem;
   StepsBCsTree* StepsBCsTreeItem;
   StepsBCsDisplacementsTree* StepsBCsDisplacementsTreeItem;
   StepsBCsTemperaturesTree* StepsBCsTemperaturesTreeItem;
@@ -175,6 +179,9 @@ void Highlight::ModelTreeItemClicked(QTreeWidgetItem* item, int column)
   } else if (LoadsCentrifugalTreeItem = dynamic_cast<LoadsCentrifugalTree*>(item->parent()))
   {
     entities = ccx_iface->get_entities("loadscentrifugal",std::stoi(item->text(1).toStdString()));
+  } else if (LoadsTrajectoryTreeItem = dynamic_cast<LoadsTrajectoryTree*>(item->parent()))
+  {
+    entities = ccx_iface->get_entities("loadstrajectory",std::stoi(item->text(1).toStdString()));
   } else if (BCsDisplacementsTreeItem = dynamic_cast<BCsDisplacementsTree*>(item->parent()))
   {
     entities = ccx_iface->get_entities("bcsdisplacement",std::stoi(item->text(1).toStdString()));
@@ -217,9 +224,9 @@ void Highlight::ModelTreeItemClicked(QTreeWidgetItem* item, int column)
   } else if (StepsLoadsGravityTreeItem = dynamic_cast<StepsLoadsGravityTree*>(item->parent()))
   {
     entities = ccx_iface->get_entities("loadsgravity",std::stoi(item->text(1).toStdString()));  
-  } else if (StepsLoadsCentrifugalTreeItem = dynamic_cast<StepsLoadsCentrifugalTree*>(item->parent()))
+  } else if (StepsLoadsTrajectoryTreeItem = dynamic_cast<StepsLoadsTrajectoryTree*>(item->parent()))
   {
-    entities = ccx_iface->get_entities("loadscentrifugal",std::stoi(item->text(1).toStdString()));  
+    entities = ccx_iface->get_entities("loadstrajectory",std::stoi(item->text(1).toStdString()));  
   } else if (StepsBCsTreeItem = dynamic_cast<StepsBCsTree*>(item->parent()))
   {
     
@@ -245,6 +252,6 @@ void Highlight::ModelTreeItemClicked(QTreeWidgetItem* item, int column)
   for (size_t i = 0; i < entities.size(); i++)
   {
     std::string cmd = "highlight " + entities[i][0] + " " + entities[i][1];
-    CubitInterface::silent_cmd(cmd.c_str());
+    ccx_iface->silent_cmd(cmd.c_str());
   }
 }
