@@ -25,6 +25,7 @@ class LoadsPressuresTree;
 class LoadsHeatfluxesTree;
 class LoadsGravityTree;
 class LoadsCentrifugalTree;
+class LoadsTrajectoryTree;
 class BCsTree;
 class BCsDisplacementsTree;
 class BCsTemperaturesTree;
@@ -41,6 +42,7 @@ class StepsLoadsPressuresTree;
 class StepsLoadsHeatfluxesTree;
 class StepsLoadsGravityTree;
 class StepsLoadsCentrifugalTree;
+class StepsLoadsTrajectoryTree;
 class StepsBCsTree;
 class StepsBCsDisplacementsTree;
 class StepsBCsTemperaturesTree;
